--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "swiper": "^8.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
